# large_scale_traj_optimizer

./: LICENSE  README.md
example1/: CMakeLists.txt  package.xml
example1/launch/: example1.launch
example1/src/: example1_node.cpp
include/: root_finder.hpp  traj_min_jerk.hpp  traj_min_snap.hpp
