<package>
  <name>example1</name>
  <author email="wangzhepei@live.com">ZhepeiWang</author>
  <maintainer email="wangzhepei@live.com">ZhepeiWang</maintainer>
  <version>0.1.0</version>
  <description>
      the example1 package
  </description>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>
  
</package>
